# omni-stack

./: .env.bak  .env.example  .gitignore  AGENTS.md  COMMIT_MSG.txt  README.md  TODO.md  Vagrantfile  actions.yml  create-wiki-task.json  docker-compose.dev.yml  docker-compose.mm.yml  docker-compose.yml  platforms.yml  plugins.yml  providers.yml  ready-wiki-task.json  remote.yml  settings.yml  tools.yml  vectorizer-state.json
.github/workflows/: publish.yml
backup/: Dockerfile
backup/scripts/: backup.sh  checkpoint.sh  entrypoint.sh  restore_backup.sh  restore_checkpoint.sh
crates/mcp-server-docker-compose/: Cargo.toml
crates/mcp-server-docker-compose/src/: main.rs
crates/mcp-server-fetch/: Cargo.toml
crates/mcp-server-filesystem/: Cargo.toml
crates/mcp-server-skills/: Cargo.toml
docs/: platform-setup-research.md
notes/: agent-prompt-context-research.md  docker-compose-exec-bug.md
plugins/: .gitignore
profiles/default/: config.json
profiles/omni/: config.json
scripts/: RESEARCH.md  check-token.py  debug_api.py  debug_api2.py  debug_dups.py  debug_ensure.py  debug_platforms.py  debug_test_rust.py  debug_test_rust_full.py  fix_env.py  mm-setup.py  mm-test-message.py  mm-test.py  recreate-test-channel.py  recreate-test-channel.sh  run_all_tests.py  setup-test-chan.py  standalone_group13.py  tests.py  tests_group12.py  tests_group13.py
services/: docker-compose.obs.yml
services/cloudflared/: Dockerfile  config.yaml
services/grafana/: Dockerfile
services/loki/: Dockerfile  loki-config.yaml
services/noop/: server.py
toolbox/: Dockerfile
(+126 files in other folders)
