[package]
name = "mcp-server-docker-compose"
version = "0.1.0"
edition = "2021"
description = "Docker Compose MCP server — run docker compose commands"

[dependencies]
mcp-server-util = { path = "../mcp-server-util" }
anyhow = "1"
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
